# fusion360-mcp-server

./: .gitignore  README.md  pyproject.toml
config/: cursor-mcp-config.json
examples/: simple_box.py
fusion360_addon/: Fusion360MCP.manifest  Fusion360MCP.py  README.md
fusion360_addon/server/: __init__.py  command_handler.py  socket_server.py  ui_panel.py
src/fusion360_mcp/: __init__.py  __main__.py  fusion360_connection.py  script_generator.py  server.py  tools.py
